// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders snapshot of content 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

<section
  class="emotion-0"
>
  <h3>
    Taylor Swift
  </h3>
  <p>
    Better than Jimmy Page.
  </p>
</section>
`;

exports[`Card renders snapshot of focused card 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  box-shadow: 0 0 0 2px #009BD8;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  box-shadow: 0 0 0 2px #009BD8,0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

<a
  class="emotion-0"
  href="http://taylorswift.com"
>
  Taylor Swift Website
</a>
`;

exports[`Card renders snapshot of headstones and content 1`] = `
.emotion-0 {
  display: block;
  position: relative;
  padding-top: 20px;
  margin-top: 20px;
  background-color: #FFFFFF;
  border: 1px solid rgba(5, 25, 45, 0.15);
  border-radius: 4px;
  -webkit-transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),-webkit-transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  transition: box-shadow 600ms cubic-bezier(0.1, 0.8, 0.2, 1),transform 600ms cubic-bezier(0.1, 0.8, 0.2, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.emotion-0:where(a, button) {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0:hover {
  box-shadow: 0px 3px 5px -1px rgba(5, 25, 45, 0.3);
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  top: -20px;
  left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<section
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <span>
      Headstone 1
    </span>
    <span>
      Headstone 2
    </span>
  </div>
  <p>
    Taylor Swift
  </p>
</section>
`;
